# dimos-21-days-sprint

./: .gitignore  MUJOCO_LOG.TXT  gen_mocap3.py  mav.parm  pyproject.toml  test_pingpong.py  train_pingpong.py
.github/workflows/: ci.yml
dimos/agents/: agent.py  web_human_input.py
dimos/agents/skills/: osm.py
dimos/animator/: __init__.py  engine.py  gait.py  mixer.py  orchestrator.py  personality.py  retargeter.py  rig.py  sim_head.py  test_animator.py
dimos/core/: blueprints.py  fleet.py  fleet_example.py  global_config.py  module.py  module_coordinator.py
dimos/datasync/: __init__.py  demo.py  export.py  recorder.py  session.py  sync.py  test_sync.py
dimos/games/: __init__.py
dimos/memory2/: module.py  stream.py  test_stream.py
dimos/navigation/nav_3d/mls_planner/rust/: Cargo.toml
dimos/navigation/nav_3d/mls_planner/rust/src/: adjacency.rs  dijkstra.rs  edges.rs  main.rs  nodes.rs  planner.rs  surfaces.rs  voxel.rs
dimos/perception/: spatial_perception.py
dimos/robot/: all_blueprints.py  test_all_blueprints.py
dimos/teleop/: README.md
docker/ros/: Dockerfile
docker/ros-dev-pin/: Dockerfile
docs/: docs.json
docs/development/: testing.md
examples/: fleet_sim_demo.py  spatial_memory_demo.py  spatial_memory_demo_README.md
misc/fresh-ubuntu-tests/: vmtest.sh
openclaw/: AGENTS.md  BOOT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  auth-profiles.example.json  openclaw-gateway.example.service  openclaw.example.json
tools/: animator_engine_demo.py  animator_face_demo.py  animator_live.py  animator_preview.py  animator_show.py
(+178 files in other folders)
